# olindba-chess-gui

./: Cargo.toml
src/: animation.rs  client.rs  gameboard_controller.rs  gameboard_view.rs  main.rs  utils.rs
