[package]
name = "olindba-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5.6"
alvinw-chess = { git = "https://github.com/INDA23PlusPlus/alvinw-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }